--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -14,8 +14,8 @@
 
         <ImageView
             android:id="@+id/imgcontact"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="60dp"
+            android:layout_height="90dp"
             android:background="#FC9E26"
             android:src="@drawable/contactimage" />
 
@@ -33,7 +33,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/allerta_stencil"
                 android:text="contact name"
-                android:textSize="25dp" />
+                android:textSize="20dp"
+                android:textColor="@color/white"/>
 
             <TextView
                 android:id="@+id/txtNumber"
@@ -41,7 +42,32 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/allerta_stencil"
                 android:text="contact number"
-                android:textSize="18dp" />
+                android:textSize="13dp"
+                android:textColor="@color/white"/>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/edit"
+                    android:layout_marginTop="10dp"
+                    app:tint="@color/white"
+                    />
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/delete"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
+                    app:tint="@color/white" />
+
+
+
+            </LinearLayout>
 
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.cardview.widget.CardView>
