--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -50,6 +50,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/editButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/edit"
@@ -58,6 +59,7 @@
                     />
 
                 <ImageView
+                    android:id="@+id/deleteButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/delete"
