--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-            android:background="#FC9E26"
-            android:orientation="vertical"
-            android:layout_marginRight="30dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#FC9E26"
+    android:orientation="vertical"
+    android:layout_marginRight="30dp">
 
     <TextView
+        android:id="@+id/addContactTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Contact"
@@ -18,6 +19,7 @@
         />
 
     <EditText
+        android:id="@+id/addName"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -27,6 +29,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/allerta_stencil"/>
     <EditText
+        android:id="@+id/addNumber"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -35,6 +38,18 @@
         android:textSize="20dp"
         android:layout_marginTop="10dp"
         android:fontFamily="@font/allerta_stencil"
+        android:layout_marginBottom="20dp"/>
+
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save"
+        android:textSize="30dp"
+        android:fontFamily="@font/allerta_stencil"
+        android:backgroundTint="@color/white"
+        android:textColor="@color/black"
+        android:layout_gravity="center_horizontal"
         android:layout_marginBottom="20dp"/>
 
 
