--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -50,11 +50,22 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/callButton"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/baseline_call_24"
+                    android:layout_marginTop="10dp"
+                    app:tint="@color/white"
+                    />
+
+
+                <ImageView
                     android:id="@+id/editButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/edit"
                     android:layout_marginTop="10dp"
+                    android:layout_marginLeft="10dp"
                     app:tint="@color/white"
                     />
 
