--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
+        app:cardBackgroundColor="#FF404040"
         app:cardCornerRadius="7dp"
         app:cardUseCompatPadding="true">
 
@@ -33,8 +34,8 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/allerta_stencil"
                 android:text="contact name"
-                android:textSize="20dp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="20dp" />
 
             <TextView
                 android:id="@+id/txtNumber"
@@ -42,8 +43,9 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/allerta_stencil"
                 android:text="contact number"
-                android:textSize="13dp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="13dp" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -53,31 +55,28 @@
                     android:id="@+id/callButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/baseline_call_24"
                     android:layout_marginTop="10dp"
-                    app:tint="@color/white"
-                    />
+                    android:src="@drawable/baseline_call_24"
+                    app:tint="@color/white" />
 
 
                 <ImageView
                     android:id="@+id/editButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/edit"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
-                    app:tint="@color/white"
-                    />
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/edit"
+                    app:tint="@color/white" />
 
                 <ImageView
                     android:id="@+id/deleteButton"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/delete"
-                    android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"
+                    android:layout_marginTop="10dp"
+                    android:src="@drawable/delete"
                     app:tint="@color/white" />
-
 
 
             </LinearLayout>
