--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -40,6 +40,18 @@
         android:fontFamily="@font/allerta_stencil"
         android:layout_marginBottom="20dp"/>
 
+    <EditText
+        android:id="@+id/addInstagram"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:hint="Instagram ID"
+        android:textColorHint="#404040"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/allerta_stencil"
+        android:layout_marginBottom="20dp"/>
+
     <Button
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
