Add Update Layout updated.

--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -20,13 +20,13 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         app:cardCornerRadius="0dp"
-        app:cardElevation="10dp">
+        app:cardElevation="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:background="@drawable/contact_background"
+            android:background="#FC9E26"
             android:orientation="vertical">
 
 
