--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,10 @@
     <style name="Base.Theme.ContactsApp" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
     </style>
 
-    <style name="Theme.ContactsApp" parent="Base.Theme.ContactsApp" />
+    <style name="Theme.ContactsApp" parent="Base.Theme.ContactsApp" >
+        <item name="android:statusBarColor">@color/Orange</item>
+    </style>
 </resources>
