--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Orange">#FC9E26</color>
+    <color name="DarkGrey">#FF2B2B2B</color>
+    <color name="LightGrey">#FF404040</color>
 </resources>
