--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -1,107 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
+    android:backgroundTint="@color/LightGrey"
+    android:id="@+id/relativeLayout"
+    android:background="@color/LightGrey"
+    tools:context=".MainActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#FF404040"
-        app:cardCornerRadius="7dp"
-        app:cardUseCompatPadding="true">
+        android:backgroundTint="@color/LightGrey"
+        android:background="@color/LightGrey"
+        app:cardCornerRadius="3dp">
 
-
-        <ImageView
-            android:id="@+id/imgcontact"
-            android:layout_width="60dp"
-            android:layout_height="90dp"
-            android:background="#FC9E26"
-            android:src="@drawable/contactimage" />
-
-
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="80dp"
-            android:orientation="vertical">
+            app:cardCornerRadius="100dp"
+            android:layout_margin="5dp">
 
+            <ImageView
+                android:id="@+id/imgcontact"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/contactimage"
+                android:background="@color/Orange"/>
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txtName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/allerta_stencil"
-                android:text="contact name"
+                android:fontFamily="@font/abel"
+                android:text="Contact Name"
                 android:textColor="@color/white"
-                android:textSize="20dp" />
-
+                android:textSize="25sp" />
             <TextView
                 android:id="@+id/txtNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/allerta_stencil"
-                android:text="contact number"
+                android:text="123456789"
+                android:fontFamily="@string/font"
                 android:textColor="@color/white"
-                android:textSize="13dp" />
+                android:textSize="15sp"/>
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+        </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/callButton"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/call_icon"
-                    app:tint="#57C3F4" />
+    </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/whatsappButton"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/whatsapp"
-                     />
+    <LinearLayout
+        android:id="@+id/linear"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:layout_marginLeft="70dp"
+        android:layout_marginBottom="5dp">
 
-                <ImageView
-                    android:id="@+id/instagramButton"
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginLeft="10dp"
-                    android:src="@drawable/instagram"
-                    />
+        <ImageView
+            android:visibility="visible"
+            android:id="@+id/callButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="3dp"
+            android:src="@drawable/call_icon"
+            />
 
+        <ImageView
+            android:visibility="visible"
+            android:id="@+id/whatsappButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="3dp"
+            android:src="@drawable/whatsapp"
+            />
 
-                <ImageView
-                    android:id="@+id/editButton"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="14dp"
-                    android:src="@drawable/edit_icon2"
-                    app:tint="@color/white"
-                     />
+        <ImageView
+            android:visibility="visible"
+            android:id="@+id/instagramButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="3dp"
+            android:src="@drawable/instagram"
+            />
 
-                <ImageView
-                    android:id="@+id/deleteButton"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/delete"
-                    app:tint="@color/white" />
+        <ImageView
+            android:visibility="visible"
+            android:id="@+id/editButton"
+            android:layout_width="30dp"
+            android:layout_marginRight="3dp"
+            android:layout_height="30dp"
+            app:tint="@color/white"
+            android:src="@drawable/edit_icon2"
+            />
 
+        <ImageView
+            android:visibility="visible"
+            android:id="@+id/deleteButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="3dp"
+            android:src="@drawable/baseline_delete_24"
+            />
+    </LinearLayout>
 
-            </LinearLayout>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.cardview.widget.CardView>
-
-
-</LinearLayout>
+</RelativeLayout>
