--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/LightGrey"
-    android:id="@+id/relativeLayout"
+    android:id="@+id/carryVelocity"
     android:background="@color/LightGrey"
-    tools:context=".MainActivity"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardCornerRadius="10dp"
+    android:layout_margin="2dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,7 +27,7 @@
                 android:id="@+id/imgcontact"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/contactimage"
+                android:src="@drawable/contact_image"
                 android:background="@color/Orange"/>
         </androidx.cardview.widget.CardView>
 
@@ -59,8 +60,8 @@
     </LinearLayout>
 
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/linear"
-        android:visibility="visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="65dp"
@@ -68,50 +69,46 @@
         android:layout_marginBottom="5dp">
 
         <ImageView
-            android:visibility="visible"
             android:id="@+id/callButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/call_icon"
             />
 
         <ImageView
-            android:visibility="visible"
             android:id="@+id/whatsappButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/whatsapp"
             />
 
         <ImageView
-            android:visibility="visible"
             android:id="@+id/instagramButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/instagram"
             />
 
         <ImageView
-            android:visibility="visible"
             android:id="@+id/editButton"
             android:layout_width="30dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="5dp"
             android:layout_height="30dp"
             app:tint="@color/white"
-            android:src="@drawable/edit_icon2"
+            android:src="@drawable/info_icon"
             />
 
         <ImageView
-            android:visibility="visible"
             android:id="@+id/deleteButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginRight="3dp"
+            android:layout_marginRight="5dp"
             android:src="@drawable/baseline_delete_24"
             />
     </LinearLayout>
 
-</RelativeLayout>
+
+</androidx.cardview.widget.CardView>
