--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -35,7 +35,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="10dp"
-                android:fontFamily="@font/allerta_stencil"
+                android:fontFamily="@string/font"
                 android:text="Add Contact"
                 android:textColor="#FF404040"
                 android:textSize="40dp" />
@@ -49,8 +49,8 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="15dp"
-                android:background="#60ffffff"
-                android:fontFamily="@font/allerta_stencil"
+                android:background="@drawable/custom_input"
+                android:fontFamily="@string/font"
                 android:gravity="center_horizontal"
                 android:hint="Enter Name"
                 android:textColor="#FF404040"
@@ -64,8 +64,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:background="#60ffffff"
-                android:fontFamily="@font/allerta_stencil"
+                android:background="@drawable/custom_input"
+                android:fontFamily="@string/font"
                 android:gravity="center_horizontal"
                 android:hint="Enter Number"
                 android:inputType="number"
@@ -80,8 +80,8 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="20dp"
-                android:background="#60ffffff"
-                android:fontFamily="@font/allerta_stencil"
+                android:background="@drawable/custom_input"
+                android:fontFamily="@string/font"
                 android:gravity="center_horizontal"
                 android:hint="Instagram ID"
                 android:textColor="#FF404040"
@@ -95,7 +95,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="20dp"
                 android:backgroundTint="@color/white"
-                android:fontFamily="@font/allerta_stencil"
+                android:fontFamily="@string/font"
                 android:text="Save"
                 android:textColor="@color/black"
                 android:textSize="30dp" />
