--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -3,7 +3,7 @@
     <style name="Toolbar_Text">
         <item name="android:textSize">40sp</item>
         <item name="android:textColor">#FF2B2B2B</item>
-        <item name="android:fontFamily">@font/allerta_stencil</item>
+        <item name="android:fontFamily">@string/font</item>
         <!-- You can customize other text attributes here -->
     </style>
 
