--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 
@@ -17,7 +17,8 @@
         android:layout_columnWeight="1"
         android:layout_rowWeight="1"
         app:cardCornerRadius="0dp"
-        app:cardElevation="30dp">
+        app:cardElevation="30dp"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,17 +89,35 @@
                 android:textColorHint="#404040"
                 android:textSize="30dp" />
 
-            <Button
-                android:id="@+id/saveButton"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="20dp"
-                android:backgroundTint="@color/white"
-                android:fontFamily="@string/font"
-                android:text="Save"
-                android:textColor="@color/black"
-                android:textSize="30dp" />
+                android:layout_marginLeft="50dp"
+                android:layout_marginBottom="10dp">
+
+
+                <Button
+                    android:id="@+id/saveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:backgroundTint="@color/white"
+                    android:fontFamily="@string/font"
+                    android:text="Save"
+                    android:textColor="@color/black"
+                    android:textSize="30dp" />
+
+                <ImageView
+                    android:id="@+id/deleteButton"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/baseline_delete_24"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="60dp"
+                    app:tint="@color/white" />
+
+
+            </LinearLayout>
 
 
         </LinearLayout>
@@ -107,16 +126,5 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 </RelativeLayout>
+
