--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FC9E26"
+    android:background="@color/Orange"
     android:elevation="20dp"
     android:id="@+id/contactsTitle"
     app:title="Contacts"
