--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -60,7 +60,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -93,6 +93,22 @@
             />
 
         <ImageView
+            android:id="@+id/XButton"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginRight="7dp"
+            android:src="@drawable/x"
+            />
+
+        <ImageView
+            android:id="@+id/linkedinButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="7dp"
+            android:src="@drawable/linkedin"
+            />
+
+        <ImageView
             android:id="@+id/editButton"
             android:layout_width="30dp"
             android:layout_marginRight="7dp"
@@ -101,6 +117,20 @@
             android:src="@drawable/info_icon"
             />
     </LinearLayout>
+
+    <ImageView
+        android:visibility="gone"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginRight="7dp"
+        android:src="@drawable/call_icon"
+        android:layout_gravity="end|bottom"
+        android:layout_marginBottom="5dp"
+        android:layout_marginEnd="10dp"
+        android:background="@drawable/custom_input"
+        android:padding="3dp"
+
+        />
 
 
 </androidx.cardview.widget.CardView>
