x and linkedin implemented

--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -90,6 +90,7 @@
                 android:textSize="30dp" />
 
             <EditText
+                android:id="@+id/addX"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -104,6 +105,7 @@
                 android:textSize="30dp" />
 
             <EditText
+                android:id="@+id/addLinkedin"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
