--- a/app/src/main/res/layout/contact_row.xml
+++ b/app/src/main/res/layout/contact_row.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/LightGrey"
         android:background="@color/LightGrey"
+        android:layout_marginLeft="10dp"
         app:cardCornerRadius="3dp">
 
         <androidx.cardview.widget.CardView
@@ -60,7 +61,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:visibility="visible"
+        android:visibility="gone"
         android:id="@+id/linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
