--- a/app/src/main/res/layout/add_update_layout.xml
+++ b/app/src/main/res/layout/add_update_layout.xml
@@ -27,6 +27,21 @@
             android:gravity="center"
             android:orientation="vertical">
 
+            <androidx.cardview.widget.CardView
+                android:layout_marginTop="30dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="100dp">
+
+                <ImageView
+                    android:id="@+id/progress_circular"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/contact_image"
+                    android:background="@color/white"/>
+
+            </androidx.cardview.widget.CardView>
+
 
             <TextView
                 android:id="@+id/addContactTitle"
@@ -48,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="15dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginRight="15dp"
                 android:background="@drawable/custom_input"
                 android:fontFamily="@string/font"
